# self-host-finance

./: .gitignore  .install.sh  .start.sh  docker-compose.yml  install.sh  restart.sh  start.sh  stop.sh  tailwind.config.ts
backend/: .env  .env.back  .env.example  alembic.ini  create_db.py  pyproject.toml  requirements.txt  test_investment_regression.py  test_points_check.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  11d5fd789600_add_investment_snapshot_tables.py  573ef0a6d3d8_add_account_number_field.py  9c1b2f5b7a12_add_categories_table.py  a2c9b09ce264_add_category_keywords_table.py  b9d40aa1b795_add_broker_tokens_table.py  ba59e39c6748_add_auto_trade_tables.py  baf61206be36_add_parsing_strategies_table.py  beca3f5b9b0d_add_broker_accounts_table.py  c7d9c2f1e3ab_add_investment_price_tables.py  c8b0d2f8e8aa_expand_broker_token_columns.py  cc3f4f1a2d10_add_investment_peak_tracker.py  d78a1a2f3c44_extend_auto_trade_rule_fields.py  e1d3c9b3f0a1_add_auto_trade_global_tables.py  f5967abe8824_add_investment_order_execution_tables.py  g7h8i9j0k1l2_add_discord_webhook_user_settings.py  i9j0k1l2m3n4_placeholder_missing_revision.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py
backend/app/brokers/: __init__.py  base.py  kis.py
backend/app/core/: exceptions.py  security.py  token_encryption.py
backend/app/models/: __init__.py  account.py  auto_trade.py  auto_trade_global.py  broker_account.py  broker_token.py  category.py  category_keyword.py  investment.py  investment_order.py  investment_peak.py  (+6 more)
(+95 files in other folders)
